<resources>
    <string name="app_name">ScreenTest</string>
    <string name="init_test">Init Test</string>
    <string name="screen_density">- Screen Density [optional (default 5x7)] -</string>
    <string name="row_numbers">Number of rows</string>
    <string name="columns_numbers">Number of Columns</string>
    <string name="time_out_test">- Test timeout [optional (default 10s)] -</string>
    <string name="time_out_number">Timeout (sec)</string>
    <string name="success_test">Success Test</string>
    <string name="fail_test">Fail test</string>

    <string name="remaining_time">Remaining time %1$s</string>
</resources>